--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,26 +6,22 @@
   
     
 }
-.background{
 
-    position: relative;
-    width: 100%;
-    height: 100vh;  
-}
 
-.nav{
-    /* position: fixed; */
-    /* background-color: rgb(229, 239, 252); */
+
+.Nav{
+    position: fixed;
+    overflow: hidden ;
+    background-color: #ffffff;
     margin-bottom: 10px;
     display: flex;
     width: 100%;
-    height: 15%;
-    align-items: center;
+    height: 15% ;
+    align-items:  center;
     justify-content: space-between;
-    box-shadow: 0 2px 5px rgb(0 0 0 / 0.1)
-   
-   
-}
+    box-shadow: 0 2px 5px rgb(0 0 0 / 0.1);
+    padding:0 ;
+   }
 img{
     padding: 10px;
 }
@@ -46,12 +42,25 @@ td{
 }
 
 .nav1{
-    font-weight: 600px;
-   margin-bottom: 5px;
+    position: relative;
+   
+    color: #447efa;
+    font-weight: 600;
+   margin-top: 140px;
     margin-left: 140px;
+
+ }
+ @media only screen and (max-width: 750px){
+    .nav1{
+        margin-top: 920px;
+    }
+ }
+ #form{
+    border: none;
  }
 
  .form1{
+    position: relative;
    padding-top: 10px;
    margin-top: 10px;
    margin-left: 140px;
@@ -60,6 +69,7 @@ td{
    box-shadow: 0 5px 10px rgb(0 0 0 / 0.1)
  }
  .form2{
+    position: relative;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 20px;
@@ -69,6 +79,7 @@ td{
    box-shadow: 0 5px 10px rgb(0 0 0 / 0.1)
  }
  .form3{
+    position: relative;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 20px;
@@ -78,6 +89,7 @@ td{
    box-shadow: 0 5px 10px rgb(0 0 0 / 0.1)
  }
  .form4{
+    position: relative;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 20px;
@@ -87,6 +99,7 @@ td{
    box-shadow: 0 5px 10px rgb(0 0 0 / 0.1)
  }
  .form5{
+    position: relative;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 20px;
@@ -107,53 +120,69 @@ td{
     color: rgb(65, 64, 64);
     padding: 5px;
  }
-
- button{
-    margin-top: 5px;
+ /* #button { 
+    margin-top: 10px !important;
     padding: 5px;
-    background-color: #6a98fc;
-    margin-left: 100px;
+    background-color: #447efa;
+    margin-left: 400px;
+    padding: 5px 5px;
+    font-weight: 700;
     border: none;
+    color: #ffffff;
+    border-radius: 5px !important;
     cursor:pointer;
-    margin-left: 410px;
-}
-button:hover {
+    margin-left: 400px !important;
+} */
+/* button:hover {
     background-color: #447efa;
     color: #ffffff;
     cursor: pointer
-  }
+  } */
 .btn{
     margin-top: 10px;
-    background-color: #6a98fc;
-    border: none;
-    padding: 5px;
+    background-color: #447efa !important;
+    border: none !important;
+    padding: 10px 10px!important;
+    font-size: 12px !important;
     cursor:pointer;
+    font-weight: 700 !important;
     margin-bottom: 20px;
-    margin-left: 410px;
+    margin-left: 403px;
 }
 .btn:hover {
-    color: #ffffff;
-    background-color: #447efa;
-    cursor: pointer
-  }
-#dropDownList{
+    color: #ffffff !important;
     cursor: pointer;
-    border: 1px solid grey;
-   background-color: #ffffff;
-  
+  }
+#entitylist{
+    cursor: pointer ;
+    padding: 10px;
+    width: 300px;
+    border: 1px solid rgb(221, 220, 220);
+    background-color: #ffffff;
+    border-radius: 6px;  
 }
-#dropDownList:hover{
-    background-color: #6a98fc;
+#entitylist:hover{
+    
+    background-color: #6a98fc !important;
     color: #ffffff;
 }
 #entity{
     cursor: pointer;
-    border: 1px solid grey;
+    border: 1px solid rgb(221, 220, 220);
     background-color: #ffffff;
-    margin-right: 430px;
+    margin-right: 335px;
+    padding: 10px;
+    width: 300px;
+    border: 1px solid rgb(221, 220, 220);
+    background-color: #ffffff;
+    border-radius: 6px;
 }
 #entity:hover{
     background-color: #6a98fc;
-    color: #ffffff;
+    color: #ffffff;  
+}
+#download{
+    padding: 8px;
+    margin-left: -20px;
 }
 
