upload function added

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <main>
+    <main id="main">
         <section class="form1">
             <div>
 
@@ -84,7 +84,6 @@
                     <table>
                         <tr>
                             <td>Entity Name</td>
-                            <td>&nbsp;</td>
                             <td>
                                 <select id="entity">
                                     <option selected>Select Entity</option>
