--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,11 +10,11 @@
                    <div class="dropdown" >
                     <img id="menu-icon" class="dropbtn" src="" th:src="@{/images/menu-icon.png}" alt="">
                     <div class="dropdown-content">
-                        <a th:href="@{/api}">admin</a>
-                        <a th:href="@{/api/validate}">validate </a>
-                        <a th:href="@{/api/transform}">transform </a>
-                        <a th:href="@{/api/load}">load </a>
-                        <a th:href="@{/api/report}">report </a>
+                        <a th:href="@{/api}">Admin</a>
+                        <a th:href="@{/api/validate}">Validate </a>
+                        <a th:href="@{/api/transform}">Transform </a>
+                        <a th:href="@{/api/load}">Load </a>
+                        <a th:href="@{/api/report}">Report </a>
                        
                        
                 </div>
