--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -6,6 +6,11 @@
   
     
 }
+#main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .Nav{
     position: fixed;
     background-color: #ffffff;
@@ -50,8 +55,8 @@ td{
  .form1{
     position: relative;
    padding-top: 10px;
-   margin-top: 100px;
-   margin-left: 140px;
+   margin-top: 140px;
+   padding: 20px;
    margin-bottom: 25px;
    width: 80%;
    box-shadow: 0 5px 10px rgb(0 0 0 / 0.1)
@@ -61,7 +66,7 @@ td{
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 20px;
-   margin-left: 140px;
+   
    margin-bottom: 25px;
    width: 80%;
    box-shadow: 0 5px 10px rgb(0 0 0 / 0.1)
@@ -71,7 +76,7 @@ td{
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 20px;
-   margin-left: 140px;
+ 
    margin-bottom: 25px;
    width: 80%;
    box-shadow: 0 5px 10px rgb(0 0 0 / 0.1)
@@ -81,7 +86,7 @@ td{
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 20px;
-   margin-left: 140px;
+  
    margin-bottom: 25px;
    width: 80%;
    box-shadow: 0 5px 10px rgb(0 0 0 / 0.1)
@@ -91,7 +96,7 @@ td{
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 20px;
-   margin-left: 140px;
+  
    margin-bottom: 25px;
    width: 80%;
    box-shadow: 0 5px 10px rgb(0 0 0 / 0.1)
