--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -14,17 +14,20 @@
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
 
-        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" r
-        el="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" r el="stylesheet">
 
     <link rel="stylesheet" href="" th:href="@{/css/admin.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" th:src="@{/js/listcsv.js}"></script>
+
+    <link th:href="@{/css/sweetalert.css}" type="text/css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script th:src="@{/js/sweetalert.min.js}" type="text/javascript"></script>
 </head>
 
 <body>
-    <div th:replace = "fragments :: navbar"></div>
+    <div th:replace="fragments :: navbar"></div>
 
     <section th:replace="${content}">
 
