--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -218,3 +218,36 @@ td{
   .dropdown:hover .dropdown-content {display: block;}
   
   /* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
+  #setPrimary{
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 400;
+    font-size: large;
+    color: rgb(31, 149, 31);
+}
+#buttonRemove{
+  background-color:#6a98fc;
+  color: #fff;
+  border: none;
+  font-weight: 600;
+  margin-left: 10px;
+  border-radius: 2px;
+  padding: 2px 6px;
+}
+#buttonAdd{
+  background-color: #6a98fc;
+  color: #ffffff;
+  border: none;
+  font-weight: 600;
+  font-size: 20px;
+  margin-left: 100px;
+  border-radius: 2px;
+  padding: 2px 6px;
+
+}
+#buttonRemove:hover{
+  background-color: #f72e2ec3;
+  color: #ffffff;  
+}
