--- a/src/main/resources/static/css/validate.css
+++ b/src/main/resources/static/css/validate.css
@@ -35,5 +35,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgb(91, 205, 91);
+    font-weight: 400;
+    font-size: large;
+    color: rgb(31, 149, 31);
+}
+#entityValidate{
+    cursor: pointer ;
+    padding: 10px;
+    width: 300px;
+    border: 1px solid rgb(221, 220, 220);
+    background-color: #ffffff;
+    border-radius: 6px;  
+}
+#entityValidateS{
+    cursor: pointer ;
+    padding: 10px;
+    width: 300px;
+    border: 1px solid rgb(221, 220, 220);
+    background-color: #ffffff;
+    border-radius: 6px;  
 }
