--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -79,24 +79,26 @@
 
             <h3>Secondary Lookup File (Optional)</h3>
 
-            <form id="formreads" th:object="${csvfiles}">
-                <table th:each="entry: ${csvfiles}">
+            <form id="formreads" th:action="@{/api/writeS}" method="post" th:object="${csvfiles}" th:each="entry: ${csvfiles}">
+                <table>
                     <tr>
+                        
                             <th>Lookup Field</th>
                             <th>Lookup Values</th>
+                            <th ><input type="hidden" th:name="${entry.key}"></th>
                         </tr>
 
-                    <div class="form-group" th:each=" map : ${entry}">
+                    <div class="form-group" th:each=" map : ${entry.value}">
                         
                         <tr>
-                            <td ><input id="key" type="text" th:name="${map.key}" th:value="${map.key}"></label></td>
+                            <td ><input id="key" type="text" th:value="${map.key}"></label></td>
                             <td><input id="value" th:name="${map.key}" type="text" th:value="${map.value}"
                                     class="form-control"></td>
                                     <td><input id="buttonRemove"type="button" value="X"></td>
                         </tr>
                         
                     </div>
-                    <table id="newdata"></table>
+                    
                 <tr>
                     
                     <td>
