--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <div th:replace="fragments :: navbar"></div>
+    <div th:replace="~{fragments :: navbar}"></div>
 
     <section th:replace="${content}">
 
