--- a/src/main/resources/templates/load.html
+++ b/src/main/resources/templates/load.html
@@ -1,5 +1,5 @@
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{base::layout(~{::section})}">
 
 
     <section>
