--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -1,4 +1,4 @@
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{base::layout(~{::section})}">
 
 
     <section>
